--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,30 @@
 .nav{
-  margin: 1rem
+  margin: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: fixed;
+  top:0;
+  left:0;
 }
 #logo{
   width: 3rem;
   height:3rem;
   object-fit: contain;
+  margin-left: 2rem;
+}
+.search-bar{
+  display: flex;
+  align-items: center;
+  margin-right: 5rem;
+  border-radius: 20px;
+  border: 1px solid gray;
+  padding-left: 0.5rem;
+
+}
+.search-input{
+  border: none;
+  width: 17rem;
+  height:2rem
 }
