--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@
   top:0;
   left:0;
   background-color: white;
-  border-bottom: 1px solid black;
-  z-index: 1;
+  z-index: 100;
 }
 #logo{
   width: 3rem;
@@ -34,22 +33,27 @@
 .sidebar{
   display: flex;
   flex-direction: column;
+  /* justify-content: space-evenly; */
+  align-items: center;
   width: 10rem;
   height: 100vh;
   position: fixed;
-  top:4rem;
+  top:70px;
   left: 0;
   background-color: white;
-  border-right: 1px solid black;
+  overflow-y: scroll;
 }
 .sidebar-button{
   border: none;
   background-color: white;
-  /* margin: 0.5rem 0 */
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.7rem;
+  margin-top: 0.7rem;
 }
 .home{
-  margin-left: 10rem;
+  margin-left: 11rem;
 }
 #main{
-  margin-top: 4rem;
+  margin-top: 4.5rem;
 }
